--- a/project/style.css
+++ b/project/style.css
@@ -63,3 +63,37 @@ body {
     margin: 5px 0 20px;
     opacity: 0.8;
 }
+.user-list {
+    list-style-type: none;
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    max-height: 400px;
+    overflow-y: auto;
+}
+.user-list li {
+    display: flex;
+    padding: 20px;
+}
+.user-list img {
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+.user-list .user-info {
+    margin-left: 10px;
+    padding-top: 4%;
+}
+.user-list .user-info h4 {
+    margin: 0 0 10px;
+}
+.user-list .user-info p {
+    font-size: 12px;
+}
+.user-list li:not(:last-of-type) {
+    border-bottom: 1px solid rgb(220, 220, 220);
+}
+.user-list li.hide {
+    display: none;
+}
